Practica 5 MVC Vistas

--- a/PracticaMVC/appsettings.json
+++ b/PracticaMVC/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "equiposDbConnection": "Data Source = localhost\\SQLEXPRESS; Initial Catalog = equiposDb; User id = sa; Password = 1928; Connect Timeout = 120; Encrypt=False"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
